--- a/src/main/resources/templates/sitio/index.html
+++ b/src/main/resources/templates/sitio/index.html
@@ -14,7 +14,7 @@
 <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div th:replace="/Layout :: navbar"></div>
+	<div th:replace="Layout :: navbar"></div>
 
 	<div class="container">
 		<br />
